Opened 15 years ago
Closed 15 years ago
#550 closed defect (fixed)
Can not store AMR mode 15 (no data) packet through avformat - ffmpeg 0.6.3
| Reported by: | ilevin | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avformat |
| Version: | git-master | Keywords: | mov AMR |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
Logic in movenc.c, function ff_mov_write_packet(), prevents putting no data AMR NB packets - the check will consider such a packet as a multi packet incorrectly. Attached is a simple fix for the issue.
Attachments (1)
Change History (5)
by , 15 years ago
| Attachment: | movenc.c.diff added |
|---|
comment:1 by , 15 years ago
comment:2 by , 15 years ago
You are right, I could, but I wanted to preserve the array with the logical meaning of "how much of payload each AMR mode packet carries", instead of adding the TOC byte to the size.
comment:3 by , 15 years ago
| Keywords: | mov added; mode 15 removed |
|---|---|
| Status: | new → open |
| Version: | unspecified → git-master |
I suggest you clone current FFmpeg, change the required value in the array - no additional comment needed afaict - and send a patch to ffmpeg-devel.
(I cannot comment on the issues you point out in the other ticket.)
comment:4 by , 15 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
I committed a patch to current git head, please reopen if this does not fix the issue you saw.



Can't you simply add "1" to the entries in packed_size that need it to make this patch smaller?