Fix AMR block length for no data mode when muxing mov.

Fixes ticket #550.
This had been analyzed and reported by Igor Levin, igor d levin comverse com